--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24469,7 +24469,18 @@ div.ant-typography-edit-content {
     padding: 0;
     opacity: 0;
   }
-}.login-form {
+}.my-slide {
+  width: 80%;
+  margin: 0 auto;
+  height: 400px;
+}
+
+.my-slide img {
+  width: 100%;
+  height: 400px;
+}
+
+.login-form {
   max-width: 300px;
   margin: 0 auto;
 }
