--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24496,6 +24496,18 @@ div.ant-typography-edit-content {
   width: 100%;
 }
 
+.salon-slide {
+  position: relative;
+}
+
+.salon-slide-basliq {
+  position: absolute;
+  bottom: 5%;
+  left: 2%;
+  background-color: whitesmoke;
+  font-size: 24px;
+}
+
 .login-form {
   max-width: 300px;
   margin: 0 auto;
