--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,3 @@
-@import '~antd/dist/antd.css';
-@import 'variables';
-@import 'styles';
+// @import '~antd/dist/antd.css';
+// @import 'variables';
+// @import 'styles';
