--- a/resources/js/styles/index.scss
+++ b/resources/js/styles/index.scss
@@ -1,4 +1,4 @@
-@import 'home','salon','client','user';
+@import 'home','salon','client','user','admin';
 .login-form{
     max-width: 300px;
     margin:0 auto;
